# TradingPlatform

./: CMakeLists.txt  cppbackend_config.json  main.cpp
Client/: CMakeLists.txt  main.cpp
Core/: Utilities.cpp  Utilities.h
Server/: CMakeLists.txt  main.cpp
Server/Config/: drogon.json
Server/Core/: IOrderRepo.cpp  IOrderRepo.h
